testdata/baselines/reference/submodule/compiler/ignoredJsxAttributes.errors.txt
ignoredJsxAttributes.tsx(5,24): error TS2307: Cannot find module 'react' or its corresponding type declarations.
ignoredJsxAttributes.tsx(12,39): error TS2503: Cannot find namespace 'JSX'.
ignoredJsxAttributes.tsx(16,5): error TS2322: Type 'number' is not assignable to type 'string'.


==== ignoredJsxAttributes.tsx (3 errors) ====
    /// <reference path="/.lib/react16.d.ts" />
    
    // Repro from #44797
    
    import * as React from "react";
                           ~~~~~~~
!!! error TS2307: Cannot find module 'react' or its corresponding type declarations.
    
    interface Props {
        foo: string;
        [dataProp: string]: string;
    }
    
    declare function Yadda(props: Props): JSX.Element;
                                          ~~~
!!! error TS2503: Cannot find namespace 'JSX'.
    
    let props: Props = {
        foo: "",
        "data-yadda": 42,  // Error
        ~~~~~~~~~~~~
!!! error TS2322: Type 'number' is not assignable to type 'string'.
!!! related TS6501 ignoredJsxAttributes.tsx:9:5: The expected type comes from this index signature.
    };
    
    let x1 = <Yadda foo="hello" data-yadda={42}/>;
    let x2 = <Yadda bar="hello" data-yadda={42}/>;  // Error
    